# gs-plugin-ultramarine-pkgdb-collections

./: README.md  gs-plugin-ultramarine-pkgdb-collections.c  gs-plugin-ultramarine-pkgdb-collections.h  meson.build
data/: org.gnome.Software.Plugin.UltramarinePkgdbCollections.metainfo.xml
web/: collections.json
